Serverscanner updates to unify client- and serverscanner